[project]
name = "gradient-sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "mujoco>=3.3.7",
    "mujoco-mjx>=3.3.7",
    "numpy>=2.3.4",
    "seaborn>=0.13.2",
    "warp-lang>=1.10.0",
]
